# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger="Makefile.in"
srcname="DejaGnu"

configdirs="binutils.all"

# per-host:

# per-target:

	# everything defaults to unix for a target
target_abbrev=unix
target_makefile_frag=config/mt-unix

	# this section is for all targets
case "${target}" in
i386-*-aout)		target_abbrev=aout ; 
				target_makefile_frag=config/mt-i386-aout ;;
m68*-abug-aout)		target_abbrev=abug ; 
				target_makefile_frag=config/mt-m68k-abug-aout ;;
m68*-abug-coff)		target_abbrev=abug ; 
				target_makefile_frag=config/mt-m68k-abug-coff ;;
m68*-*-abug)		target_abbrev=abug ; 
				target_makefile_frag=config/mt-m68k-abug-aout ;;
m68k-*-coff)		target_abbrev=coff ; 
				target_makefile_frag=config/mt-m68k-coff ;;
m68k-*-aout)		target_abbrev=aout ; 
				target_makefile_frag=config/mt-m68k-aout ;;
i960-*-nindy)		target_abbrev=nind ; 
				target_makefile_frag=config/mt-i960-nindy ;;
m68k-*-vxworks)		target_abbrev=vx ; 
				target_makefile_frag=config/mt-m68k-vx ;;
i960-*-vxworks)		target_abbrev=vx ; 
				target_makefile_frag=config/mt-i960-vx ;;
a29k-*-udi)		target_abbrev=udi ; 
				target_makefile_frag=config/mt-a29k-udi ;;
a29k-isstip-*)		target_abbrev=itip ; 
				target_makefile_frag=config/mt-a29k-isstip ;;
esac

# post-target:

	# make local configuration file, using MAKE if one is specified.
