# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger=Makefile.in
srcname="DejaGnu"

# per-host:

# per-target:

# All the tests are run on the host, which we're assuming is unix.
# But it looks like dejagnu wants `where the tests are run' to be
# in target_abbrev.
target_abbrev=default

# post-target:
