AC_PREREQ(2.59)
AC_INIT(refcard.tex)
sinclude(../../config/acx.m4)
AC_PROG_INSTALL
AC_PROG_LN_S
dnl Required by html, pdf, install-pdf and install-html
AC_SUBST(datarootdir)
AC_SUBST(docdir)
AC_SUBST(htmldir)
AC_SUBST(pdfdir)
ACX_PKGVERSION([GDB])
ACX_BUGURL([http://www.gnu.org/software/gdb/bugs/])
AC_OUTPUT(Makefile)
