srcname="Remote GDB server for Netware"
srctrigger=gdbserve.c

# per-host:

# per-target:

# Map target cpu into the config cpu subdirectory name.
# The default is $target_cpu.

case "${target_cpu}" in

alpha)			gdb_target_cpu=alpha ;;
c[12])			gdb_target_cpu=convex ;;
hppa*)			gdb_target_cpu=pa ;;
i[345]86)		gdb_target_cpu=i386 ;;
m68*)			gdb_target_cpu=m68k ;;
np1)			gdb_target_cpu=gould ;;
pn)			gdb_target_cpu=gould ;;
pyramid)		gdb_target_cpu=pyr ;;
sparc*)			gdb_target_cpu=sparc ;;
*)			gdb_target_cpu=$target_cpu ;;

esac

if [ ! -f ${srcdir}/../config/${gdb_target_cpu}/gdbserve.mt ]; then
	echo '***' "GDBSERVE does not support target ${target}" 1>&2
	exit 1
fi

#  We really shouldn't depend on there being a space after CPU_FILE= ...
cpufile=`awk '$1 == "CPU_FILE=" { print $2 }' <${srcdir}/../config/${gdb_target_cpu}/gdbserve.mt`

target_makefile_frag=../config/${gdb_target_cpu}/gdbserve.mt

# If hostfile (XM_FILE) and/or targetfile (TM_FILE) and/or nativefile
# (NAT_FILE) is not set in the ?config/* file, we don't make the
# corresponding links.  But we have to remove the xm.h files and tm.h
# files anyway, e.g. when switching from "configure host" to
# "configure none".

files=
links=
rm -f cpu.h
if [ "${cpufile}" != "" ]; then
	files="${files} ${cpufile}.h"
	links="${links} cpu.h"
fi
